# 42_python_piscine

./: .gitignore
python-0-Starting/ex00/: Hello.py
python-0-Starting/ex01/: format_ft_time.py
python-0-Starting/ex02/: find_ft_type.py
python-0-Starting/ex03/: NULL_not_found.py
python-0-Starting/ex04/: whatis.py
python-0-Starting/ex05/: building.py
python-0-Starting/ex06/: filterstring.py  ft_filter.py
python-0-Starting/ex07/: sos.py
python-0-Starting/ex08/: Loading.py  tester.py
python-0-Starting/ex09/: LICENSE  README.md  setup.cfg
python-0-Starting/ex09/ft_package/: __init__.py  core.py
python-0-Starting/ex09/ft_package.egg-info/: PKG-INFO
python-1-Array/ex00/: give_bmi.py  tester.py
python-1-Array/ex01/: array2D.py  tester.py
python-1-Array/ex02/: load_image.py  tester.py
python-1-Array/ex03/: zoom.py
python-1-Array/ex04/: rotate.py
python-1-Array/ex05/: load_image.py  pimp_image.py  tester.py
python-2-DataTable/ex00/: load_csv.py
python-2-DataTable/ex01/: aff_life.py
python-2-DataTable/ex02/: aff_pop.py
python-2-DataTable/ex03/: load_csv.py  projection_life.py
python-3-OOP/ex00/: tester.py
python-3-OOP/ex01/: S1E7.py  S1E9.py  tester.py
python-3-OOP/ex02/: DiamondTrap.py
python-3-OOP/ex03/: ft_calculator.py  tester.py
python-3-OOP/ex04/: ft_calculator.py  tester.py
python-4-DOD/ex00/: statistics.py  tester.py
python-4-DOD/ex01/: in_out.py
python-4-DOD/ex02/: callLimit.py
python-4-DOD/ex03/: new_student.py  tester.py
